Updated to run in Spree 2.0, look more 2.0 in admin. Totally hack the frontend to show thumbnails together with imagethumbs, and show the video with prettyPhoto lightbox

--- a/app/views/spree/shared/_videos_product_tabs.erb
+++ b/app/views/spree/shared/_videos_product_tabs.erb
@@ -1,3 +1,3 @@
 <li<%== ' class="active"' if current == "Videos" %>>
-<%= link_to t("videos"),  admin_product_videos_url(@product)  %>
+<%= link_to "<span class='text'>#{t("videos")}</span>".html_safe,  admin_product_videos_url(@product), :class => "icon_link with-tip icon-play"  %>
 </li>
