--- a/app/views/spree/admin/videos/index.html.erb
+++ b/app/views/spree/admin/videos/index.html.erb
@@ -1,8 +1,16 @@
+<% content_for :page_actions do %>
+    <li id="new_product_link">
+      <%= button_link_to Spree.t(:new_video), new_admin_product_video_url(@product), { :icon => 'icon-plus', :id => 'new_video_link' } %>
+    </li>
+<% end %>
+
 <%= render :partial => 'spree/admin/shared/product_sub_menu' %>
 
 <%= render :partial => 'spree/admin/shared/product_tabs', :locals => {:current => "Videos"} %>
 
-<table class="index sortable">
+<fieldset>
+  <legend align="center"><%= Spree.t(:add_video_to_product) %></legend>
+  <table class="index sortable">
   <tr>
     <th><%= t("youtube_ref") %></th>
   </tr>
@@ -14,20 +22,15 @@
         	<%= h video.youtube_ref %>
       </td>
       <td class="actions">
-        <%= link_to_with_icon('edit', t("edit"), edit_admin_product_video_url(@product, video), :class => 'edit') %>
-        &nbsp;
-        <%= link_to_delete video, {:url => admin_product_video_url(@product, video) }%>
+        <%= link_to_with_icon 'icon-edit', Spree.t(:edit), edit_admin_product_video_url(@product, video), :no_text => true, :data => {:action => 'edit'} %>
+        <%= link_to_delete video, { :url => admin_product_video_url(@product, video), :no_text => true } %>
       </td>
     </tr>
   <% end %>
 </table>
 
 <div id="video"></div>
-<br/>
-<p>
-    <%= link_to icon('add') + ' ' + t("new_video"), new_admin_product_video_url(@product), :id => "new_video_link" %>
-</p>
-
+</fieldset>
 <% content_for :head do %>
   <script type="text/javascript">
     jQuery(document).ready(function(){
