--- a/app/views/spree/admin/videos/edit.html.erb
+++ b/app/views/spree/admin/videos/edit.html.erb
@@ -3,8 +3,7 @@
 <%= render :partial => 'spree/admin/shared/product_tabs', :locals => {:current => "Images"} %>
 
 <%= render "spree/shared/error_messages", :target => @image %>
-
-<%= form_for(:video, :url => admin_product_video_url(@product), :html => { :method => :put, :multipart => true }) do |f| %>
+<%= form_for(:video, :url => admin_product_video_url(@product.id, @video.id), :html => { :method => :put, :multipart => true }) do |f| %>
   <table class="basic-table">
     <%= render :partial => "form", :locals => { :f => f } %>
   </table>
